k8s/apps/grafana/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
